doc updates + otel tests
