# src/api/openapi/swagger.yaml
@@ -40,6 +40,42 @@ definitions:
         example: 8888
         type: integer
     type: object
+  config.OTelBatching:
+    properties:
+      batch_size:
+        example: 20
+        type: integer
+      export_interval:
+        allOf:
+        - $ref: '#/definitions/time.Duration'
+        example: 5000000000
+      max_queue_size:
+        example: 200
+        type: integer
+    type: object
+  config.OTelConfig:
+    properties:
+      basic_auth:
+        example: dXNlcjpwYXNz
+        type: string
+      batching:
+        allOf:
+        - $ref: '#/definitions/config.OTelBatching'
+        description: Batching settings
+      endpoint:
+        example: http://localhost:4318
+        type: string
+      password:
+        example: secret
+        type: string
+      stream_name:
+        description: OpenObserve specific header
+        example: quincy
+        type: string
+      username:
+        example: admin
+        type: string
+    type: object
   config.PGConfig:
     properties:
       database:
@@ -63,6 +99,8 @@ definitions:
     type: object
   config.Sinks:
     properties:
+      otel:
+        $ref: '#/definitions/config.OTelConfig'
       postgres:
         $ref: '#/definitions/config.PGConfig'
     type: object
@@ -91,6 +129,27 @@ definitions:
         example: geraldo
         type: string
     type: object
+  time.Duration:
+    enum:
+    - -9223372036854775808
+    - 9223372036854775807
+    - 1
+    - 1000
+    - 1000000
+    - 1000000000
+    - 60000000000
+    - 3600000000000
+    format: int64
+    type: integer
+    x-enum-varnames:
+    - minDuration
+    - maxDuration
+    - Nanosecond
+    - Microsecond
+    - Millisecond
+    - Second
+    - Minute
+    - Hour
   types.Score:
     properties:
       box:
@@ -220,9 +279,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Accepts a completed score check result from an agent and persists
-        it to the database. The timestamp field is assigned by the server on receipt
-        and must not be included in the request body.
+      description: Accepts a completed score check result from an agent and forwards
+        it to all configured sinks. The timestamp field is assigned by the server
+        on receipt and must not be included in the request body.
       parameters:
       - description: Completed score check
         in: body
